--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -1,6 +1,6 @@
 <p>Appwrite supports multiple protocols for accessing the server, including <a href="/docs/rest">REST</a>, <a href="/docs/graphql">GraphQL</a>, and <a href="/docs/realtime">Realtime</a>.</p>
 
-<p>The GraphQL API allows you to query and mutate any resource type on your Appwrite server through a single endpoint. Every endpoint available though REST is available though GraphQL, except for OAuth.</p>
+<p>The GraphQL API allows you to query and mutate any resource type on your Appwrite server through the endpoint <code>/v1/graphql</code>. Every endpoint available through REST is available through GraphQL, except for OAuth.</p>
 
 <h2><a href="/docs/graphql#requests" id="requests">Requests</a></h2>
 
