--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -17,7 +17,7 @@
     <tr>
         <td><code>X-Appwrite-Project: [PROJECT-ID]</code></td>
         <td><span class="tag red">required</span></td>
-        <td>The ID of your Appwrite Project to the REST API.</td>
+        <td>The ID of your Appwrite project</td>
     </tr>
     <tr>
         <td><code>Content-Type: application/json</code></td>
