--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -363,7 +363,7 @@
 
 <h3><a href="/docs/graphql#sdk-usage" id="sdk-usage">SDK Usage</a></h3>
 
-<p>The wide range of Appwrite SDKs also support GraphQL in addition to the REST services.</p>
+<p>Appwrite SDKs also support GraphQL in addition to the REST services.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
