--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -294,7 +294,7 @@
     }
 ]</code></pre></div>
 
-<p>This can be extremely powerful as it allows you to execute complex actions in a single network request.</p>
+<p>This allows you to execute complex actions in a single network request.</p>
 
 <!--<h3><a href="/docs/graphql#databases-integration" id="query-batching">Databases Integration</a></h3>-->
 <!---->
