--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -148,7 +148,7 @@
             string
         </td>
         <td data-title="Description: ">
-            JSON encoded map of form-data filenames to the operations dot-path to inject the file to, e.g. "variables.file"
+            JSON encoded map of form-data filenames to the operations dot-path to inject the file to, e.g. <code>variables.file</code>.
         </td>
     </tr>
     </tbody>
