--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -156,7 +156,7 @@
 
 <h2><a href="/docs/graphql#responses" id="responses">Responses</a></h2>
 
-<p>A response to a GraphQL request will take the following structure:</p>
+<p>A response to a GraphQL request will have the following structure:</p>
 
 <table class="vertical full args">
     <thead>
