--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -229,7 +229,7 @@
     }
 }</code></pre></div>
 
-<p>This can be an extremely useful feature for performance, network efficiency, and app responsiveness. As the processing happens on the server, the bandwidth consumed for the request can be dramatically reduced.</p>
+<p>This can be a useful feature for performance, network efficiency, and app responsiveness. As the processing happens on the server, the bandwidth consumed for the request can be dramatically reduced.</p>
 
 <h3><a href="/docs/graphql#query-batching" id="query-batching">Query Batching</a></h3>
 
