--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -765,11 +765,9 @@ query {
 </table>
 
 <h2><a href="/docs/authentication#limits" id="limits">Session Limits</a></h2>
-<p class="margin-top-small text-fade">version >= 1.2</p>
+<p>In Appwrite versions 1.2 and above, you can limit the number of active sessions created per user to prevent the accumulation of unused but active sessions. New sessions created by the same user past the session limit deletes the oldest session.</p>
 
-<p>You can limit the number of active sessions created per user to prevent accumulation of unused but active sessions. New sessions created by the same user past the session limit will cause the oldest session to be deleted.</p>
-
-<p>To change the session limit per user in the <b>Security<b> tab of the Auth Service in your Appwrite Console. The default session limit is 10.</p> 
+<p>To change the session limit per user in the <b>Security</b> tab of the Auth Service in your Appwrite Console. The default session limit is 10.</p> 
 
 <h2><a href="/docs/authentication#security" id="security">Security</a></h2>
 
