--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -767,7 +767,7 @@ query {
 <h2><a href="/docs/authentication#limits" id="limits">Session Limits</a></h2>
 <p>In Appwrite versions 1.2 and above, you can limit the number of active sessions created per user to prevent the accumulation of unused but active sessions. New sessions created by the same user past the session limit deletes the oldest session.</p>
 
-<p>To change the session limit per user in the <b>Security</b> tab of the Auth Service in your Appwrite Console. The default session limit is 10.</p> 
+<p>You can change the session limit in the <b>Security</b> tab of the Auth Service in your Appwrite Console. The default session limit is 10.</p> 
 
 <h2><a href="/docs/authentication#security" id="security">Security</a></h2>
 
