--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -174,7 +174,7 @@ Content-Disposition: form-data; name="map"
 Content-Disposition: form-data; name="0"; filename="file.txt"
 Content-Type: text/plain
 
-Alpha file content.
+File content.
 
 --cec8e8123c05ba25--</code></pre>
         </div>
