--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -213,12 +213,12 @@ func main() async throws {
         documentId: "[DOCUMENT_ID]",
         data: "{}"
     ) {
-        id
-        collectionId
-        databaseId
-        createdAt
-        updatedAt
-        permissions
+        _id
+        _collectionId
+        _databaseId
+        _createdAt
+        _updatedAt
+        _permissions
         data
     }
 }</code></pre>
@@ -357,7 +357,7 @@ func main() async throws{
     ) {
         total
         documents {
-            id
+            _id
             data
         }
     }
@@ -562,7 +562,7 @@ func main() async throws {
     ) {
         total
         documents {
-            id
+            _id
             data
         }
     }
@@ -722,7 +722,7 @@ func main() async throws {
     ) {
         total
         documents {
-            id
+            _id
             data
         }
     }
@@ -849,7 +849,7 @@ func main() async throws {
     ) {
         total
         documents {
-            id
+            _id
             data
         }
     }
