Add changes about $ vs _

--- a/app/views/docs/graphql.phtml
+++ b/app/views/docs/graphql.phtml
@@ -61,6 +61,16 @@
     </tbody>
 </table>
 
+<div class="notice">
+  <h2>GraphQL Model Parameters</h2>
+
+  <p>In Appwrite's GraphQL API, all internal model parameters are prefixed with <code>_</code> instead of <code>$</code> because <code>$</code> is reserved by GraphQL.</p>
+
+  <p>For example, <code>$collectionId</code> in the REST API would be referenced as <code>_collectionId</code> in the GraphQL API.</p>
+
+</div>
+
+
 <h3><a href="/docs/graphql#get-requests" id="get-requests">GET Requests</a></h3>
 
 <p>You can execute a GraphQL query via a GET request, passing a <code>query</code> and optionally <code>operationName</code> and <code>variables</code> as query parameters.</p>
@@ -105,6 +115,7 @@
 <div class="ide margin-bottom" data-lang="graphql" data-lang-label="GraphQL">
     <pre class="line-numbers"><code class="prism language-graphql" data-prism>query GetAccount {
     accountGet {
+        _id
         email
     }
 }</code></pre></div>
@@ -214,6 +225,7 @@
 <div class="ide margin-bottom" data-lang="graphql" data-lang-label="GraphQL">
     <pre class="line-numbers"><code class="prism language-graphql" data-prism>query GetAccount {
     accountGet {
+        _id
         email
     }
 }</code></pre></div>
@@ -224,6 +236,7 @@
     <pre class="line-numbers"><code class="prism language-json" data-prism>{
     "data": {
         "accountGet": {
+            "_id": "...",
             "email": "..."
         }
     }
@@ -238,6 +251,7 @@
 <div class="ide margin-bottom" data-lang="graphql" data-lang-label="GraphQL">
     <pre class="line-numbers"><code class="prism language-graphql" data-prism>query GetAccountAndLocale {
     accountGet {
+        _id
         email
     }
     localeGet {
@@ -251,6 +265,7 @@
     <pre class="line-numbers"><code class="prism language-json" data-prism>{
     "data": {
         "accountGet": {
+            "_id": "...",
             "email": "..."
         },
         "localeGet": {
