--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -867,7 +867,7 @@ func main() async throws {
 
 <div class="notice">
     <h3>Using an Appwrite SDK in Your Function</h3>
-    <p>Appwrite Server SDKs require an API key, an endpoint, and a project ID for authentication. Appwrite passes in your project ID with the function variable  <code>APPWRITE_FUNCTION_PROJECT_ID</code>, but not the endpoint and API key. If you need to use a Server SDK, you will need to add function variables for your endpoint and API key in the <b>Settings<b> tab of your function.</p>
+    <p>Appwrite Server SDKs require an API key, an endpoint, and a project ID for authentication. Appwrite passes in your project ID with the function variable  <code>APPWRITE_FUNCTION_PROJECT_ID</code>, but not the endpoint and API key. If you need to use a Server SDK, you will need to add function variables for your endpoint and API key in the <b>Settings</b> tab of your function.</p>
     <p>If you are running a <b>local Appwrite instance</b>, you will need to pass in the machine's public IP instead of <code>'https://localhost/v1'</code>. Localhost inside the function's runtime container is not the same as localhost of your machine.</p>
 </div>
 
