Fix another unclosed b tag

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -581,7 +581,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
         ->render();
 ?>
 
-<p>To execute a function from the Appwrite console, click the <b>Execute Now<b> button on your function's overview page. To execute a function from the API, send a POST request to the <a href="/docs/client/functions#functionsCreateExecution">function execution endpoint</a>.</p>
+<p>To execute a function from the Appwrite console, click the <b>Execute Now</b> button on your function's overview page. To execute a function from the API, send a POST request to the <a href="/docs/client/functions#functionsCreateExecution">function execution endpoint</a>.</p>
 
 <p>The function execution endpoint is available from both Appwrite client and server APIs. To execute your function from the <b>server API</b>, you need an API key with 'execution.write' scope.</p>
 
