--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -879,7 +879,7 @@ func main() async throws {
 
 <h2><a href="/docs/functions#monitorDebug" id="monitorDebug">Monitor & Debug</a></h2>
 
-<p>You can monitor your function execution usage stats and logs from your Appwrite console. To access your functions usage stats and logs, click the 'Usage' tab in your function dashboard.</p>
+<p>You can monitor your function execution usage stats and logs from your Appwrite console. To access your functions usage stats and logs, click the <b>Usage</b> tab in your function dashboard.</p>
 
 <p>The usage screen in your console will allow you to track the number of execution and your function CPU usage time. You can also review a detailed log of your function execution history, including the function exit code, output log, and error log.</p>
 
