--- a/app/views/docs/models.phtml
+++ b/app/views/docs/models.phtml
@@ -17,8 +17,8 @@ $example = function ($model, $models) use (&$example)
 
     foreach($properties as $key => $property) {
         $value = $property['x-example'] ?? null;
-        $isArray = $property['array'] ?? false;
         $type = $property['type'] ?? null;
+        $isArray = $type == 'array';
         $child = str_replace('#/definitions/', '', ($property['items']['$ref'] ?? ''));
 
         // We consider anyOf and oneOf the same in docs views
