Ensure list of objects render as list
Previously, there was a bug where list of objects (like Documents List)
rendered as an object only like:

```json
{
    "total": 5,
    "documents": {
        "$id": "5e5ea5c16897e",
        "$collectionId": "5e5ea5c15117e",
        "$databaseId": "5e5ea5c15117e",
        "$createdAt": "2020-10-15T06:38:00.000+00:00",
        "$updatedAt": "2020-10-15T06:38:00.000+00:00",
        "$permissions": [
            "read(\"any\")"
        ]
    }
}
```

This fixes the list of objects to look like:

```json
{
    "total": 5,
    "documents": [
        {
            "$id": "5e5ea5c16897e",
            "$collectionId": "5e5ea5c15117e",
            "$databaseId": "5e5ea5c15117e",
            "$createdAt": "2020-10-15T06:38:00.000+00:00",
            "$updatedAt": "2020-10-15T06:38:00.000+00:00",
            "$permissions": [
                "read(\"any\")"
            ]
        }
    ]
}
```

--- a/app/views/docs/models.phtml
+++ b/app/views/docs/models.phtml
@@ -36,7 +36,8 @@ $example = function ($model, $models) use (&$example)
         }
 
         if(!empty($child) && \array_key_exists($child, $models)) {
-            $output[$key] = $example($models[$child], $models);
+            $childExample = $example($models[$child], $models);
+            $output[$key] = $isArray ? [$childExample] : $childExample;
         }
         else if($isXOf) {
             if($isArray) {
