changes link to correct link

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -604,7 +604,7 @@ let session = try await account.createEmailSession(
 </ul>
 
 <p>
-    When a user tries to access restricted resources, you can check if they have a valid, active session. The Account Service provides a <a href="/docs/account#accountGet">get()</a> method that checks whether the current user session is active and returns the account information if successful.
+    When a user tries to access restricted resources, you can check if they have a valid, active session. The Account Service provides a <a href="/docs/client/account#accountGet">get()</a> method that checks whether the current user session is active and returns the account information if successful.
 </p>
 
 <p>
